fix center align

--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,13 @@ h1 {
     font-weight: 400;
     font-size: 6rem;
     line-height: 6rem;
+    text-align: center;
 }
 
 .clock-wrapper {
-    text-align: center;
-    display: grid;
-    place-items: center; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100vh;
 }
